fix css on iphone vision

--- a/src/components/TodoInputs/TodoInputs.module.scss
+++ b/src/components/TodoInputs/TodoInputs.module.scss
@@ -52,7 +52,7 @@
 .button { 
     margin: 0 auto;
     margin-top: 10px; 
-    border: 1px solid black;
+    box-shadow: 0px 0px 14px rgba(112, 121, 153, 0.3);
     width: 50%; 
     height: 60px;    
     transition: all 1s ease-in-out;
@@ -60,8 +60,7 @@
     &:hover {
         cursor: pointer;
         color: white;
-        background-color: rgb(29, 81, 166);
-        border: 1px solid transparent;
+        box-shadow: 0px 0px 14px rgba(77, 94, 154, 0.3);
     }
 }
 .chosen_block {
